# no-recursion

./: .envrc  .gitattributes  .gitignore  .vale.ini  LICENSE  LICENSE.proprietary  README.md  cabal.project  flake.nix  garnix.yaml  lightning-talk.org  nix-ci.nix
.cache/vale/config/vocabularies/no-recursion/: accept.txt
.config/: mustache.yaml
.config/flake/: outputs.nix
.config/project/: default.nix  github-ci.nix  hackage-publish.nix
.github/: settings.yml
.github/workflows/: build.yml  hackage-publish.yml  switch-pm-generation.yml
core/: CHANGELOG.md  LICENSE  README.md  henforcer.toml  no-recursion.cabal
core/docs/: license-report.md
core/src/: NoRecursion.hs  PluginUtils.hs
core/tests/: doctests.hs
core/tests/ignore/: test.hs
core/tests/ignore/Test/: AllowRecursion.hs  AnnModule.hs  AnnName.hs  IgnoreDefaultImpls.hs  UnannName.hs
core/tests/no-ignore/: test.hs
core/tests/no-ignore/Test/: IgnoreDefaultImpls.hs
no-recursion/: CHANGELOG.md  README.md  no-recursion.cabal
no-recursion/docs/: license-report.md
no-recursion/src/: NoRecursion.hs
no-recursion/src/NoRecursion/: Core.hs
no-recursion/tests/: doctests.hs  skipped.hs  test.hs
no-recursion/tests/Test/: AllowRecursion.hs  AnnModule.hs  AnnName.hs  Module.hs  Name.hs
no-recursion/tests/ignore/: test.hs
no-recursion/tests/ignore/Test/: AllowRecursion.hs  AnnModule.hs  IgnoreDefaultImpls.hs
